Add Signature And Zoom Bar
    - Add signature
    - Add zoom bar
    - Split Shots System into shots.ts file

--- a/src/index.pug
+++ b/src/index.pug
@@ -9,7 +9,15 @@ html(lang="en")
         .shots-stack
         .dashboard
             .view
+                .view__zoom
+                    .view__zoom-bar: div
+                    .view__zoom-value
                 .view__image
+                .signature 
+                    | Made w/ 💘 & 🍭 by 
+                    a( href='https://twitter.com/AbrahemAlhofe' target='_blank' ) @AbrahemAlhofe 
+                    | - 
+                    a( href='https://github.com/AbrahemAlhofe/Shot-Cut' target='_blank' ) github repo
                 .view__upload-btn upload image
             .pointer
                 .cursor
